fixed show scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,15 @@
   box-sizing: border-box;
 }
 
-.custom-progress-bar::-webkit-progress-value {
-  background-color: blue;
+::-webkit-scrollbar {
+  width: 8px;
 }
+
 ::-webkit-scrollbar-track {
-  background-color: whitesmoke;
+  background-color: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: blue;
-}
-::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(0, 0, 255, 0.856);
+  background-color: #2762eb;
+  border-radius: 6px;
 }
